packages/svelte/tests/compiler-errors/samples/invalid-snippet-mutation/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_snippet_assignment',
		message: 'Cannot reassign or bind to snippet parameter'
	}
});
